Update tugas P6 HTML - Huda.html

--- a/tugas P6 HTML - Huda.html
+++ b/tugas P6 HTML - Huda.html
@@ -2,21 +2,6 @@
 <html>
 <body>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Styled Label</title>
-<style>
-      .styled-label {
-        font-family: Arial, sans-serif;
-        font-size: 16px;
-        color: #000000; 
-        background-color: #ffffff; 
-        padding: 8px 12px; 
-        border-radius: 5px; 
-        border: 1px solid #ffffff; 
-        display: inline-block; 
-      }
-</style>
 </head>
     <h2>Biodata</h2>
 <form>
@@ -69,7 +54,7 @@
           <input type="checkbox" id="vehicle2" name="vehicle2" value="Berenang">
           <label for="vehicle2"> Berenang</label>
           <input type="checkbox" id="vehicle3" name="vehicle3" value="Musik">
-          <label for="vehicle3"> Musik</label></td><br><br>
+          <label for="vehicle3"> Makan</label></td><br><br>
          </tr>
          
          <tr>
@@ -81,6 +66,7 @@
           <td><input type="submit">
         <input type="reset"></td>
         </tr>
+
 </table>
 </form>
 </body>
