--- a/UasDesainWeb/jual-akun.html
+++ b/UasDesainWeb/jual-akun.html
@@ -1,1 +1,68 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jual Akun</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <h2>Shop Gaming</h2>
+        <h1>Jual Akun</h1>
+        <nav>
+            <a href="index.html">Beranda</a>
+            <a href="jual-akun.html">Jual Akun</a>
+            <a href="topup-game.html">Top Up Game</a>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>Jual Akun</h2>
+            <p>Kami memiliki berbagai macam akun game premium siap jual untuk Anda.</p>
+            <div class="topup-options">
+            <h1>Mobile Legends: Bang-Bang</h1>
+            <button>Rp 10,000</button>
+            <button>Rp 20,000</button>
+            <button>Rp 30,000</button>
+            <button>Rp 40,000</button>
+            <button>Rp 50,000</button>
+            <button>Rp 60,000</button>
+            <button>Rp 70,000</button>
+            <button>Rp 80,000</button>
+        </div>
+        <div class="topup-options">
+            <h1>Fire-Fire</h1>
+            <button>Rp 10,000</button>
+            <button>Rp 20,000</button>
+            <button>Rp 30,000</button>
+            <button>Rp 40,000</button>
+            <button>Rp 50,000</button>
+            <button>Rp 60,000</button>
+            <button>Rp 70,000</button>
+            <button>Rp 80,000</button>
+        </div>
+        <div class="topup-options">
+            <h1>Call Of Duty Mobile</h1>
+            <button>Rp 10,000</button>
+            <button>Rp 20,000</button>
+            <button>Rp 30,000</button>
+            <button>Rp 40,000</button>
+            <button>Rp 50,000</button>
+            <button>Rp 60,000</button>
+            <button>Rp 70,000</button>
+            <button>Rp 80,000</button>
+        </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Shop Gaming. Hak Cipta Dilindungi.</p>
+    </footer>
+</body>
+
+</html>
