--- a/UasDesainWeb/kontak.html
+++ b/UasDesainWeb/kontak.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kontak Kami</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Contact Us</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <a href="tentang.html">Tentang</a>
+                <a href="kontak.html">Kontak</a>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Kontak Kami</h2>
+            <p>Informasi kontak/ada kesalahan bisa melalaui Kontak kami,sebagai pembuat web dari kita sabagai developer</p>
+            <form action="submit_contact.php" method="post">
+                <div>
+                    <label for="name">Nama:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div>
+                    <label for="message">Pesan:</label>
+                    <textarea id="message" name="message" required></textarea>
+                </div>
+                <div>
+                    <button type="submit">Kirim</button>
+                </div>
+            </form>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Shop Gaming. Hak Cipta Dilindungi.</p>
+    </footer>
+</body>
+</html>
 
