--- a/UasDesainWeb/tentang.html
+++ b/UasDesainWeb/tentang.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tentang Kami</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Tentang</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="tentang.html">Tentang</a></li>
+                <li><a href="kontak.html">Kontak</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Tentang Kami</h2>
+            <p>Selamat datang di situs kami! Kami adalah tim yang berdedikasi untuk memberikan informasi terkini dan terpercaya tentang topik-topik yang Anda minati. Dengan latar belakang yang beragam dan keahlian yang luas, kami berusaha untuk menyediakan konten berkualitas yang dapat memberikan wawasan baru dan memperluas pengetahuan Anda.</p>
+            <p>Terima kasih telah mengunjungi situs kami. Kami berharap Anda menemukan apa yang Anda cari dan menikmati konten yang kami tawarkan. Jika Anda memiliki pertanyaan atau umpan balik, jangan ragu untuk menghubungi kami melalui halaman kontak.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Shop Gaming. Hak Cipta Dilindungi.</p>
+    </footer>
+</body>
+</html>
 
