--- a/UasDesainWeb/topup-game.html
+++ b/UasDesainWeb/topup-game.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Top Up Game</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <h2>Shop Gaming</h2>
+        <h1>Top Up Game</h1>
+        <nav>
+            <a href="index.html">Beranda</a>
+            <a href="jual-akun.html">Jual Akun</a>
+            <a href="topup-game.html">Top Up Game</a>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>Top Up Game</h2>
+            <p>Kami menyediakan layanan top up game dengan cepat dan mudah untuk berbagai jenis permainan.</p>
+            <div class="topup-options">
+                <h3>Pilih Paket Top Up</h3>
+                <h4>Mobile Legends: Bang-Bang</h4>
+                <button>150 Diamonds - Rp 15,000</button>
+                <button>250 Diamonds - Rp 25,000</button>
+                <button>350 Diamonds - Rp 35,000</button>
+                <button>450 Diamonds - Rp 45,000</button>
+                <button>550 Diamonds - Rp 55,000</button>
+                <button>650 Diamonds - Rp 65,000</button>
+                <button>750 Diamonds - Rp 75,000</button>
+            </div>
+            <div class="topup-options">
+                <h4>Call Of Duty Mobille</h4>
+                <button>150 Diamonds - Rp 15,000</button>
+                <button>250 Diamonds - Rp 25,000</button>
+                <button>350 Diamonds - Rp 35,000</button>
+                <button>450 Diamonds - Rp 45,000</button>
+                <button>550 Diamonds - Rp 55,000</button>
+                <button>650 Diamonds - Rp 65,000</button>
+                <button>750 Diamonds - Rp 75,000</button>
+            </div>
+            <div class="topup-options">
+                <h4>Fire-Fire</h4>
+                <button>150 Diamonds - Rp 15,000</button>
+                <button>250 Diamonds - Rp 25,000</button>
+                <button>350 Diamonds - Rp 35,000</button>
+                <button>450 Diamonds - Rp 45,000</button>
+                <button>550 Diamonds - Rp 55,000</button>
+                <button>650 Diamonds - Rp 65,000</button>
+                <button>750 Diamonds - Rp 75,000</button>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Shop Gaming. Hak Cipta Dilindungi.</p>
+    </footer>
+</body>
+
+</html>
 
